schema/testdata/validation_operation_where_too_many_arguments/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    actions {
        get getProfile(username) {
            @where(profile.identity == ctx.identity, profile.username == "adaam2")
        }
    }
}
